# home-server

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  cspell.config.yaml  pyproject.toml
01_debian/: debian_13_preseed.cfg  debian_13_preseed_proxmox.cfg
01_proxmox/: README.md
02_proxmox/: cloudinit_debian_13.sh
docs/01_debian/: README.md  debian_13_preseed.cfg  debian_13_preseed_proxmox.cfg
docs/02_proxmox/: README.md  cloudinit_debian_13.sh
src/home_server/: __init__.py  inventory.py  main.py
src/home_server/configure/: __init__.py  cloudinit_debian_13.sh  install_pve.sh  main.py  proxmox_container.py  proxmox_host.py  proxmox_vm.py  samba.sh
src/home_server/configure/proxmox_community_scripts/: microcode.sh  post-pve-install.sh
src/home_server/facts/: qm.py
src/home_server/hardening/: __init__.py  main.py
src/home_server/hardening/checks/: __init__.py
src/home_server/hardening/checks/debian_13/: __init__.py  cis_1_1_1_11.sh  cis_1_1_1_x.py
src/home_server/hardening/operations/: apt.py
src/home_server/operations/: __init__.py  qm.py
